Revision history for Perl extension PPM::Repositories

0.16 unreleased
    - move test.pl to t/test.t to run it via Test::Harness
    - remove outdated wxansi repository  [RT#55053]
    - add additional architectures for wxperl repo [RT#55053]
    - add ActiveState 64-bit Linux repos
    - add ActivePerl 5.12 repos

0.15  Thu Jun 12 2008
    - add "Paul Miller\'s Games::RolePlay::MapGen and Gtk2 repository"
      as the "voltar" repository [RT#36254]
    - add note to "gtk2" repo to also check "voltar" repo

0.14  Wed Apr 23 2008
    - Add wxperl and wxansi repositories
    - Rename all 'theory' repositories to 'uwinnipeg'
    - Append '-ppm3' to PPMServer style repositories and remove the
      'S' (for "slower") suffix from the corresponding Website style repos
      for a more consistent overall naming scheme.
    - Rename 'uwinnipeg' to 'uwinnipeg56' for consistency.

0.13  Fri Apr 18 2008
    - devhelp repository has been cleaned up and only contains
      Imager module for 5.8 now.
    - Add devhelp repo to %REPO hash for new API too
    - Add '=head1 NAME' line to properly define the module abstract

0.12  Tue Apr 15 2008
    - removed smueller repository [RT#23979]
    - removed datetime repository [RT#17391]
    - removed dead repositories: soulcage, esoft, savage, spurkis, crazy, dada, rto
    - removed already commented out repositories: xray, perlxml
    - turned jenda's repository to inactive
    - added tcool and trouchelle repositories
    - addded new gtk2 repo; renamed outdated "official" one to gtk2-old
    - added get(), list() and used_archs() function
    - updated documentation
    - added some simple tests to test.pl
    - added sample scripts in eg/ subdirectory

0.11  Thu May 12 04:46:47 2005
    - removed some repositories that are gone for good
      ( http://rt.cpan.org/NoAuth/Bug.html?id=12761 )

0.10  Thu May 20 15:30:59 2004
    - updated synopsis

0.09  Sat Mar 13 19:08:08 2004
    - some PerlO values were wrong (no biggie)
