@@ -6,6 +6,7 @@ Revision history for Perl extension PPM::Repositories
     - add additional architectures for wxperl repo [RT#55053]
     - add ActiveState 64-bit Linux repos
     - add ActivePerl 5.12 repos
+    - add bioperl and bioperl-rc repos
 
 0.15  Thu Jun 12 2008
     - add "Paul Miller\'s Games::RolePlay::MapGen and Gtk2 repository"
